@@ -92,8 +92,11 @@ usage: valgrind [options] prog-and-args
          where hint is one of lax-ioctls fuse-compatible enable-outer
            no-inner-prefix no-nptl-pthread-stackcache none
     --fair-sched=no|yes|try   schedule threads fairly on multicore systems [no]
-    --kernel-variant=variant1,variant2,...  handle non-standard kernel variants [none]
-         where variant is one of bproc none
+    --kernel-variant=variant1,variant2,...
+         handle non-standard kernel variants [none]
+         where variant is one of:
+           bproc android-emulator-no-hw-tls
+           android-gpu-sgx5xx android-gpu-adreno3xx none
     --merge-recursive-frames=<number>  merge frames between identical
            program counters in max <number> frames) [0]
     --num-transtab-sectors=<number> size of translated code cache [16]
